syntax = "proto3";

package order_v1;

option go_package = "github.com/Wuchinator/food-delivery/order-service/pkg/order_v1;order_v1";


service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

message OrderItem {
  int64 product_id = 1;
  int32 quantity = 2;
}

message CreateOrderRequest {
  int64 user_id = 1;
  repeated OrderItem items = 2;
  int64 restaurant_id = 3;
  string delivery_address = 4;
}

message CreateOrderResponse {
  int64 order_id = 1;
  string status = 2;
}

message CancelOrderRequest {
  int64 order_id = 1;
}

message CancelOrderResponse {
  bool success = 1;
}
